src/components/Tables/Tables.css
.tablewrpr {
  max-width: 500px;
  margin: 60px auto 30px;
  text-align: center;
}

.table {
  border: none;
  width: 100%;
  margin: 80px auto;
  text-align: left;
}

.tableheads {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-align: left;
  font-size: 11px;
  line-height: 11px;
  font-weight: 700;
  color: #565656;
  padding: 10px 14px 18px;
}

.td {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700;
  color: #000;
  position: relative;
  vertical-align: top;
  .qty {
    position: absolute;
    right: 0;
    margin-right: 50px;
    font-size: 13px;
    line-height: 17px;
    font-weight: 600;
  }
}

.tdsmall { width: 40%; }
.tdbig { width: 60%; }

.infocontainer tr td { padding-top: 10px; }

.amount {
  color: #3C3C3C;
  font-size: 17px;
  line-height: 17px;
  padding: 0 70px 15px 14px;
}

.total {
  font-weight: 700;
  font-size: 17px;
  line-height: 17px;
  color: #F1430E;
  padding-left: 14px;
}

.pname {
  min-height: 41px;
  font-size: 13px;
  line-height: 17px;
  padding: 0 70px 40px 14px;

}

.ptotal, .ptotal2 {
  font-size: 17px;
  line-height: 16px;
  min-height: 41px;
  padding-bottom: 40px;
  padding: 0 14px 65px;
}

.ptotal {
  padding-right: 0 !important;
  .save {
    color: #29cbc8;
    font-weight: bold;
    margin-left: 5px;
  }
}

.psubtotal, .pshipping, .ptotal, .ptotal2 {
  font-size: 17px;
  line-height: 16px;
  padding: 0 70px 15px 14px;
  min-height: 41px;
}

.flatrate {
  font-size: 17px;
  line-height: 16px;
  color: #3C3C3C;
  padding-left: 14px;
}

.shippingcontents {
  font-size: 15px;
  font-weight: normal;
  line-height: 25px;
  color: #565656;
  margin: 0;
  small:not(:last-of-type)::after {
    content: ', ';
  }
}

.billaddress, .shippaddress {
  font-size: 16px;
  line-height: 16px;
  min-height: 41px;
  color: #1adab1;
  display: block;
  padding: 0px;
  margin-top: 30px;
}

.shipaddr, .billaddr {
  padding-top: 0px !important;
  padding-left: 14px;
  padding-bottom: 40px;
}

.adrcontainer {
  color: #505050;
  font-weight: 400;
  line-height: 21px;
}

.changebilling, .changeshipping {
  display: block;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  text-decoration: underline;
  color: rgb(80, 80, 80);
  cursor: pointer;
}

/* Custom classes for View Order Page */
.tablewrprOrder {
  margin: 0 auto;
  text-align: center;
  max-width: 520px;
}

.tableOrder {
  margin: 0;
  td {
    width: 40%;
    min-height: 41px;
  }
  .productname, .producttotal {
    padding: 0 15px 65px;
  }

  .orderItem {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif ;
    .productname{
      font-size: 13px;
      line-height: 17px;
      font-weight: 700;
      text-transform: uppercase;
      color: #000;
      position: relative;
    }
  }

  .productname > a {
    position: relative;
    font-size: 13px;
    line-height: 17px;
    font-weight: 700;
    text-decoration: none;
    color: #000;
    -webkit-transition: color 0.2s ease-out;
    -moz-transition: color 0.2s ease-out;
    -ms-transition: color 0.2s ease-out;
    -o-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
    display: block;
    width: 200px;
  }
  .orderitem {
    display: block;
    width: 200px;
  }

  .productname > a:after {
    content: "";
    position: absolute;
    display: block;
    bottom: -5px;
    left: 0;
    right: 0;
    height: 2px;
    background: #000;
    pointer-events: none;
    opacity: 0;
    -webkit-transform: translateY(7px);
    transform: translateY(7px);
    transition: -webkit-transform .1s cubic-bezier(0.55,.085,.68,.53),
    opacity .1s cubic-bezier(0.55,.085,.68,.53);
    transition: transform .1s cubic-bezier(0.55,.085,.68,.53),opacity .1s
    cubic-bezier(0.55,.085,.68,.53);
  }

  .productname > a:hover:after {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
    background: #000;
    transition: -webkit-transform .2s
    cubic-bezier(0.25,.46,.45,.94),opacity 0s linear;
    transition: transform .2s cubic-bezier(0.25,.46,.45,.94),
    opacity 0s linear;
    transition-delay: 0s;
  }

  .productname > a:active {
    color: rgb(25, 122, 117);
  }

  .productname .productqty {
    top: 0;
    right: 0;
    margin-right: 50px;
    position: absolute;
  }

  .productvariant {
    font-size: 11px;
    font-weight: normal;
    text-transform: uppercase;
  }

  .producttotal {
    font-weight: 700;
    font-size: 17px;
    line-height: 17px;
    text-align: left;
    vertical-align: top;
    .amount {
      font-size: 17px;
      line-height: 17px;
      padding-left: 0;
      text-align: left;
      position: absolute;
    }
  }

  .orderdetailstitle {
    font-size: 17px;
    line-height: 16px;
    font-weight: 700;
    vertical-align: top;
  }

  .orderdetails {
    font-weight: 700;
    color: #3C3C3C;
  }

  .orderdetailstitle, .orderdetails {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    padding: 0 15px 8px;
  }

}

.customerdetailstitle { font-weight: 700;  }

.customerdetailstitle, .customerdetails {
  padding: 0 15px 65px;
}

table.customerdetails {
  margin: 0 auto;
  padding-bottom: 0;
}

.firstfield {
  padding-top: 65px;
  padding-bottom: 30px;
}

.shipaddr,
.billaddr {
  .optiontext {
    height: auto;
    .block {
      display: block;
      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
      color: rgb(80, 80, 80);
      font-style: normal;
      font-weight: 400;
      font-size: 17px;
      line-height: 21px;
    }
  }
}

.hide { display: none; }
.show { display: block; }

.creditinfo {
  padding-left: 14px;
}

.creditinfo label {
  margin-right: 14px;
}

/* END Custom classes for View Order Page */

@media only screen and (max-width: 760px),
(max-device-width: 1024px) and (min-device-width: 768px) {

  .tableheads { display: none; }

  .pname, .ptotal, .ptotal2 {
    display: block;
    text-align: center;
    padding: 0;
    margin: 0;
    width: 100%;
  }

  .pname {
    padding-bottom: 10px;
    min-height: auto;
  }

  .ptotal:before {
    content: 'price';
    display: block;
    top: -18px;
    left: 28%;
    font-size: 11px;
    line-height: 17px;
    font-weight: 800;
    color: #565656;
    text-transform: uppercase;
  }

  .td {
    .qty {
      margin-right: 0px;
      position: initial;
    }
  }

  .infocontainer td {
    display: block;
    text-align: center;
    padding: 0;
    margin: 0;
    width: 100%;
    span {
      padding: 0;
    }
  }

  .productqty {
    margin-right: 0px !important;
  }

  .customerdetailstitle, .customerdetails {
    display: block;
  }

  .customerdetailstitle {
    padding-bottom: 10px;
  }

  .customerdetails {
    padding-top: 0px;
    padding-bottom: 20px;
  }
}

@media only screen and (max-width: 760px) {
  .tableOrder {
    .orderdetails,
    .orderItem {
      display: block;
      width: 100%;
      &:first-child {
        margin-top: 40px;
      }
    }
  }

  .productname,
  .producttotal {
    display: block;
    width: 88% !important;
    padding-bottom: 0px !important;
  }
}

